# diffusers-tutorial

./: .gitignore  .gitmodules  README.md  diffuser_conditionnal.ipynb  diffuser_non_conditionnal.ipynb  environment.yaml  pyproject.toml
diffusers_tutorials/: datasets.py
diffusers_tutorials/tools/: plotly.py
tutorials/: 01-diffuser_non_conditionnal.ipynb  02-diffuser_conditional.ipynb  02-diffuser_conditionnal.ipynb  03-better_conditional.ipynb  03-dataset_analysis.ipynb
tutorials/weights/: better_emb_net.pth  emb_net.pth
tutorials/weights/better_conditional_unet.pth/: config.json
weights/conditional_unet.pth/: config.json
weights/non_conditional_model.pth/: config.json
