[tool.poetry]
name = "diffusers_tutorials"
version = "0.1.0"
description = "Tutorials using the diffusers library."
authors = ["Vincent ROGER <vroger11@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
diffusers = "^0.30.0"
plotly = "^5.23.0"
tqdm = "^4.66.5"
iprogress = "^0.4"
torchvision = "^0.19.0"
matplotlib = "^3.9.1.post1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
